<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Japanese Flashcards</string>
    <string name="question"></string>
    <string name="answer"></string>
    <string name="next_button_text">random card</string>
    <string name="open_drawer_text">Flashcard Manager</string>
    <string name="close_drawer_text">Done</string>
    <string name="list_closed_text">View / Manage List</string>
    <string name="list_opened_text">Close List</string>
</resources>