<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    	android:id="@+id/quiz"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
    	>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
			android:layout_weight="7"
			>
			<Button 
				android:id="@+id/nextButton"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
			    android:text="@string/next_button_text"
			    android:textSize="20dip"
			    />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/card"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
			android:layout_weight="1"
			>
			<TextView
				android:id="@+id/question"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
			    android:gravity="center"
			    android:textSize="125dip"
			    android:text="@string/question"
			    android:background="@color/slate_gray"
			    />
			<TextView 
				android:id="@+id/answer"
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent"
			    android:gravity="center"
			    android:textSize="100dip"
			    android:text="@string/answer"
			    android:background="@color/dark_gray"
			    />
		</LinearLayout>
	</LinearLayout>
	
	<SlidingDrawer 
		android:id="@+id/slidingDrawer"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:topOffset="-55dip" 
		android:handle="@+id/handle"
		android:content="@+id/content"
		android:orientation="vertical"
		>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@id/handle"
			android:text="@string/open_drawer_text"
			android:textColor="@color/drawer_text_color"
			android:background="@drawable/tray_handle"
			/>
			
		<ScrollView
		android:id="@id/content"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:fillViewport="true">
			<LinearLayout
				android:id="@+id/content"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:background="@color/sliding_drawer_background"
				>
				<!-- Add margin to sliding drawer -->
				<RelativeLayout
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_margin="10dip"
					>
					<Button 
					    android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
					    android:id="@+id/closeDrawerButton"
					    android:text="@string/close_drawer_text"
					    />
					<EditText
						android:id="@+id/questionInput"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_below="@id/closeDrawerButton"
						android:layout_toLeftOf="@+id/inflateButton"
						/>
					<Button 
					    android:id="@id/inflateButton"
					    android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:text="Inflate"
						android:layout_alignParentRight="true"
						android:layout_alignBaseline="@id/questionInput"
					    />
					<LinearLayout
						android:id="@+id/listGroup"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_below="@id/questionInput"
						/>
				</RelativeLayout>
			</LinearLayout>
		</ScrollView>
	</SlidingDrawer>
</FrameLayout>